# adze

./: .clippy-quarantine  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  API_DOCUMENTATION.md  API_FREEZE_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_ISSUE_GLR_PARSER.md  BETA_FIXES_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_FAILURE_MAP.md  CURRENT_STATUS_2025-11.md  Cargo.toml  DEVELOPER_GUIDE.md  DOCUMENTATION.md  DOCUMENTATION_UPDATE_SUMMARY.md  FAQ.md  FIXES_SUMMARY.md  GAPS.md  GITHUB_RELEASE.md  GLR_INCREMENTAL_DESIGN.md  GLR_STATUS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  INTERNAL_RELEASE_CHECKLIST.md  KNOWN_LIMITATIONS.md  LSP_GENERATOR.md  MIGRATING.md  MIGRATION.md  MIGRATION_GUIDE.md  Makefile  NAVIGATION.md  NEXT_STEPS.md  (+99 more)
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: arena_vs_box_allocation.rs  core_baselines.rs  glr_ambiguity_stress.rs  glr_hot.rs  glr_performance.rs  glr_performance_real.rs  incremental_bench.rs  optimization_bench.rs  parse_bench.rs  stack_optimization.rs
benchmarks/fixtures/: metadata.toml
benchmarks/results/: arena_vs_box_summary.md
benchmarks/src/: fixtures.rs  lib.rs  test_grammars.rs
benchmarks/tests/: verify_fixture_parsing.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs  parse.rs
cli/tests/: cli_test.rs
common/: Cargo.toml  README.md
common/src/: lib.rs
common/tests/: attribute_extraction_comprehensive.rs  attribute_parsing_comprehensive.rs  attribute_parsing_proptest.rs  attribute_processing_proptest.rs  common_imports_comprehensive.rs  container_skip_comprehensive.rs  container_type_proptest.rs  crate_exports_comprehensive.rs  derive_expansion_proptest.rs  e2e_type_analysis_v1.rs  edge_case_stress_comprehensive.rs  edge_cases.rs  enum_expansion_proptest.rs  error_handling_proptest.rs  expansion_comprehensive.rs  expansion_edge_cases.rs  expansion_edge_cases_v2.rs  expansion_snapshots.rs  expansion_tests.rs  expansion_utils_v5_comprehensive.rs  expansion_v3_comprehensive.rs  expansion_v6.rs  extract_complex_v7.rs  extract_edge_v7.rs  extract_function_proptest.rs  extract_inner_v3.rs  extract_inner_v5.rs  extract_nested_v6.rs  extract_types_v8.rs  facade_vs_core_parity.rs  field_extraction_proptest.rs  field_mapping_comprehensive.rs  field_processing_proptest.rs  filter_composition_v7.rs  filter_function_proptest.rs  filter_inner_type_comprehensive.rs  filter_skip_v7.rs  filter_types_v2_comprehensive.rs  filter_types_v5.rs  filter_types_v6.rs  (+102 more)
crates/arena-allocator-core/: Cargo.toml  README.md
crates/bdd-conflict-core/: Cargo.toml
crates/bdd-contract/: Cargo.toml  README.md
crates/bdd-governance-contract/: Cargo.toml  README.md
crates/bdd-governance-core/: Cargo.toml  README.md
crates/bdd-governance-fixtures/: Cargo.toml  README.md
crates/bdd-governance-reporting-core/: Cargo.toml
crates/bdd-governance-snapshot-core/: Cargo.toml
crates/bdd-grammar-analysis-core/: Cargo.toml  README.md
example/: Cargo.toml  adze_debug.txt  build.rs  build_err.txt  build_with_scanner.rs  debug_build.sh  test_debug.sh
example/examples/: arithmetic_pure_parser.rs  pure_rust_demo.rs  test_arithmetic_pure.rs  test_pure_rust_parser.rs
example/src/: ambiguous.rs  ambiguous_expr.rs  arithmetic.rs  boolean_expr.rs  csv_list.rs  dangling_else.rs  external_word_example.rs  field_test.rs  ini_file.rs  json_like.rs  lambda_calculus.rs  lib.rs  main.rs  optionals.rs  performance_test.rs  regex_grammar.rs  repetitions.rs  test_manual_parse.rs  test_precedence.rs  test_precedence_focused.rs  test_specific_parse.rs  test_whitespace.rs  ts_langs.rs  typed_ast_contract.rs  words.rs
example/tests/: comprehensive_snapshots.rs  integration.rs  pure_rust_integration.rs  pure_rust_parser_tests.rs  smoke_tests.rs  state0_test.rs  verify_fixture_parsing.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_bdd_grammar_analysis_core.rs  fuzz_common_syntax_core.rs  fuzz_concurrency_bounded_map_core.rs  fuzz_concurrency_caps_core.rs  fuzz_concurrency_env_contract_core.rs  fuzz_concurrency_env_core.rs  fuzz_concurrency_init_bootstrap_core.rs  fuzz_concurrency_init_bootstrap_policy_core.rs  fuzz_concurrency_init_classifier_core.rs  fuzz_concurrency_init_core.rs  fuzz_concurrency_init_rayon_core.rs  fuzz_concurrency_map_core.rs  fuzz_concurrency_normalize_core.rs  fuzz_concurrency_parse_core.rs  fuzz_concurrency_plan_core.rs  fuzz_external_scanner.rs  fuzz_ir_normalization.rs  fuzz_lexer.rs  fuzz_linecol_core.rs  fuzz_parser.rs  fuzz_parser_backend_core.rs  fuzz_stack_pool_core.rs  fuzz_ts_format_core.rs
glr-core/: Cargo.toml  README.md  dhat-heap.json
glr-core/benches/: automaton.rs  perf_snapshot.rs
glr-core/src/: advanced_conflict.rs  conflict_inspection.rs  conflict_resolution.rs  conflict_visualizer.rs  disambiguation.rs  driver.rs  error.rs  forest_view.rs  gss.rs  gss_arena.rs  lib.rs  lib_v2.rs  parse_forest.rs  perf_optimizations.rs  precedence_compare.rs  serialization.rs  stack.rs  symbol_comparison.rs  telemetry.rs  test_helpers.rs  test_symbol_alloc.rs  ts_lexer.rs  version_info.rs
glr-core/tests/: action_cell_advanced_comprehensive.rs  action_cell_api_comprehensive.rs  action_cell_prop_v9.rs  action_cell_properties_comprehensive.rs  action_cell_proptest.rs  action_cell_v3_comprehensive.rs  action_cell_v4.rs  action_cell_v8.rs  action_cell_v9.rs  common.rs  (+256 more)
glr-test-support/: Cargo.toml
golden-tests/: Cargo.toml  README.md  generate_references.sh
ir/: Cargo.toml  README.md
lsp-generator/: Cargo.toml  README.md
macro/: Cargo.toml  README.md
playground/: Cargo.toml  README.md
runtime/: Cargo.toml  README.md  build-wasm-demo.sh  build-wasm.sh  build.rs
runtime2/: Cargo.toml  MILESTONE1.md  README.md
rust-sitter-cli/: Cargo.toml
tablegen/: Cargo.toml  LICENSE-APACHE  MIGRATING.md  README.md
testing/: Cargo.toml  README.md  test-suite.json
tool/: .gitignore  Cargo.toml  README.md
wasm-demo/: Cargo.toml  README.md  build.sh  index.html
xtask/: Cargo.toml  README.md
(+3572 files in other folders)
