[workspace]
resolver = "2"
members = [
  "macro",
  "runtime",
  "runtime2",
  "tool",
  "common",
  "ir",
  "glr-core",
  "glr-test-support",
  "tablegen",
  "xtask",
  "testing",
  "grammars/javascript",
  "grammars/python",
  "grammars/python-simple",
  "grammars/test-vec-wrapper",
  "grammars/go",
  "lsp-generator",
  "playground",
  "samples/downstream-demo",
  "cli",
  "benchmarks",
  "test-mini",
  "golden-tests",
  "wasm-demo",
]
# These crates are intentionally excluded from default workspace commands
# due to mutually exclusive features. Build them explicitly with -p when needed.
exclude = [
  "runtime/fuzz",
  "tools/ts-bridge",      # build separately to enable grammar features
  "crates/ts-c-harness",   # relies on external C/TS libs
  "example",               # has mutually exclusive pure-rust/c-backend features
]


[workspace.package]
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]
documentation = "https://github.com/effortlessmetrics/adze"
edition = "2024"
homepage = "https://github.com/effortlessmetrics/adze"
license = "Apache-2.0 OR MIT"
publish = false
repository = "https://github.com/effortlessmetrics/adze"
rust-version = "1.92.0"


[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
missing_docs = "warn"
unused_extern_crates = "deny"

[workspace.dependencies]
tree-sitter = "=0.26.5"

[profile.ci]
inherits = "dev"
debug = 0
lto = "off"
