[workspace]
resolver = "2"
members = [
  "macro",
  "runtime",
  "runtime2",
  "crates/parsetable-metadata",
  "crates/bdd-grammar-fixtures",
  "crates/bdd-governance-fixtures",
  "crates/parser-contract",
  "crates/parser-governance-contract",
  "crates/parser-feature-contract",
  "crates/runtime-governance",
  "crates/runtime-governance-api",
  "crates/runtime-governance-matrix",
  "crates/runtime2-governance",
  "crates/glr-versioning",
  "crates/governance-matrix-contract",
  "crates/governance-matrix-core-impl",
  "crates/governance-matrix-core",
  "crates/governance-runtime-core",
  "crates/governance-runtime-reporting",
  "crates/feature-policy-contract",
  "crates/concurrency-map-core",
  "crates/concurrency-plan-core",
  "crates/concurrency-normalize-core",
  "crates/concurrency-parse-core",
  "crates/concurrency-env-core",
  "crates/concurrency-init-classifier-core",
  "crates/concurrency-init-rayon-core",
  "crates/concurrency-init-core",
  "crates/concurrency-caps-core",
  "crates/governance-metadata",
  "crates/linecol-core",
  "crates/syn-type-utils",
  "crates/bdd-governance-core",
  "crates/bdd-governance-contract",
  "crates/bdd-contract",
  "crates/governance-contract",
  "crates/bdd-scenario-fixtures",
  "crates/bdd-grid-contract",
  "crates/bdd-grid-core",
  "crates/feature-policy-core",
  "tool",
  "common",
  "ir",
  "glr-core",
  "glr-test-support",
  "tablegen",
  "xtask",
  "testing",
  "grammars/javascript",
  "grammars/python",
  "grammars/python-simple",
  "grammars/test-vec-wrapper",
  "grammars/go",
  "lsp-generator",
  "playground",
  "samples/downstream-demo",
  "cli",
  "benchmarks",
  "test-mini",
  "golden-tests",
  "wasm-demo",
]
# These crates are intentionally excluded from default workspace commands
# due to mutually exclusive features. Build them explicitly with -p when needed.
exclude = [
  "runtime/fuzz",
  "tools/ts-bridge",      # build separately to enable grammar features
  "crates/ts-c-harness",   # relies on external C/TS libs
  "example",               # has mutually exclusive pure-rust/c-backend features
]


[workspace.package]
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]
documentation = "https://github.com/effortlessmetrics/adze"
edition = "2024"
homepage = "https://github.com/effortlessmetrics/adze"
license = "Apache-2.0 OR MIT"
publish = false
repository = "https://github.com/effortlessmetrics/adze"
rust-version = "1.92.0"


[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
missing_docs = "warn"
unused_extern_crates = "deny"

[workspace.dependencies]
tree-sitter = "=0.26.5"

[profile.ci]
inherits = "dev"
debug = 0
lto = "off"
