[workspace]
resolver = "2"
members = [
  "macro",
  "runtime",
  "runtime2",
  "crates/parsetable-metadata",
  "crates/bdd-grammar-analysis-core",
  "crates/bdd-grammar-fixtures",
  "crates/bdd-governance-fixtures",
  "crates/parser-contract",
  "crates/parser-governance-contract",
  "crates/parser-feature-contract",
  "crates/runtime-governance",
  "crates/runtime-governance-api",
  "crates/ts-format-core",
  "crates/runtime-governance-matrix",
  "crates/runtime2-governance",
  "crates/stack-pool-core",
  "crates/glr-versioning",
  "crates/governance-matrix-contract",
  "crates/governance-matrix-core-impl",
  "crates/governance-matrix-core",
  "crates/governance-runtime-core",
  "crates/governance-runtime-reporting",
  "crates/feature-policy-contract",
  "crates/concurrency-map-core",
  "crates/concurrency-plan-core",
  "crates/concurrency-normalize-core",
  "crates/concurrency-parse-core",
  "crates/concurrency-env-core",
  "crates/concurrency-env-contract-core",
  "crates/concurrency-init-classifier-core",
  "crates/concurrency-init-rayon-core",
  "crates/concurrency-init-bootstrap-core",
  "crates/concurrency-init-core",
  "crates/concurrency-caps-core",
  "crates/governance-metadata",
  "crates/linecol-core",
  "crates/bdd-governance-core",
  "crates/bdd-governance-contract",
  "crates/bdd-contract",
  "crates/governance-contract",
  "crates/bdd-scenario-fixtures",
  "crates/bdd-grid-contract",
  "crates/bdd-grid-core",
  "crates/feature-policy-core",
  "crates/concurrency-bounded-map-core",
  "crates/concurrency-caps-contract-core",
  "crates/concurrency-init-bootstrap-policy-core",
  "crates/parser-backend-core",
  "tool",
  "crates/common-syntax-core",
  "common",
  "ir",
  "glr-core",
  "glr-test-support",
  "tablegen",
  "xtask",
  "testing",
  "grammars/javascript",
  "grammars/python",
  "grammars/python-simple",
  "grammars/test-vec-wrapper",
  "grammars/go",
  "lsp-generator",
  "playground",
  "samples/downstream-demo",
  "cli",
  "benchmarks",
  "test-mini",
  "golden-tests",
  "wasm-demo",
  "tests/governance",
]
# These crates are intentionally excluded from default workspace commands
# due to mutually exclusive features. Build them explicitly with -p when needed.
exclude = [
  "runtime/fuzz",
  "tools/ts-bridge",      # build separately to enable grammar features
  "crates/ts-c-harness",   # relies on external C/TS libs
  "example",               # has mutually exclusive pure-rust/c-backend features
]


[workspace.package]
authors = ["Steven Zimmerman, CPA <git@effortlesssteven.com>"]
documentation = "https://github.com/effortlessmetrics/adze"
edition = "2024"
homepage = "https://github.com/effortlessmetrics/adze"
license = "Apache-2.0 OR MIT"
publish = false
repository = "https://github.com/effortlessmetrics/adze"
rust-version = "1.92.0"


[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
missing_docs = "warn"
unused_extern_crates = "deny"

[workspace.dependencies]
tree-sitter = "=0.26.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
proptest = "1.4"
insta = "1.39"
criterion = { version = "0.5", features = ["html_reports"] }
thiserror = "2.0"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
anyhow = "1.0"
tempfile = "3"
indexmap = "2.0"
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
rustc-hash = "2.1"
smallvec = "1.13"
regex = "1.11"

[profile.ci]
inherits = "dev"
debug = 0
lto = "off"
