[package]
name = "adze-benchmarks"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "parse_bench"
harness = false

[[bench]]
name = "glr_performance"
harness = false

[[bench]]
name = "glr_hot"
harness = false

[[bench]]
name = "optimization_bench"
harness = false

[[bench]]
name = "incremental_bench"
harness = false

[[bench]]
name = "stack_optimization"
harness = false

[[bench]]
name = "glr_performance_real"
harness = false

[[bench]]
name = "arena_vs_box_allocation"
harness = false

[dependencies]
adze = { path = "../runtime", features = ["pure-rust"] }
adze-example = { path = "../example" }
adze-python = { path = "../grammars/python" }
adze-ir = { path = "../ir" }
adze-glr-core = { path = "../glr-core", features = ["glr_telemetry"] }
adze-tablegen = { path = "../tablegen" }
tree-sitter = "0.20"
criterion = "0.5"
indexmap = "2.0"

[dev-dependencies]