[package]
name = "rust-sitter-cli"
version = "0.8.0-dev"
edition = "2024"
authors = ["Tree-sitter Contributors"]
description = "CLI tools for rust-sitter grammar development"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rust-sitter"
path = "src/main.rs"

[features]
dynamic = ["libloading"]
python-grammar = ["rust-sitter-python"]
javascript-grammar = ["rust-sitter-javascript"]
tree-sitter-standard = ["rust-sitter/tree-sitter-standard"]
tree-sitter-c2rust = ["rust-sitter/tree-sitter-c2rust"]
pure-rust = ["rust-sitter/pure-rust"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rust-sitter = { path = "../runtime", default-features = false }
tree-sitter = "0.25.8"
rust-sitter-tool = { path = "../tool" }
rust-sitter-ir = { path = "../ir" }
rust-sitter-common = { path = "../common" }
serde_json = "1.0"
colored = "3.0"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
walkdir = "2.5"
notify = "8"
tempfile = "3.8"
libloading = { version = "0.8", optional = true }
rust-sitter-python = { path = "../grammars/python", optional = true }
rust-sitter-javascript = { path = "../grammars/javascript", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"