[package]
name = "adze-cli"
version = "0.8.0-dev"
edition = "2024"
authors = ["Tree-sitter Contributors"]
description = "CLI tools for adze grammar development"
license = "MIT OR Apache-2.0"

[[bin]]
name = "adze"
path = "src/main.rs"

[features]
dynamic = ["libloading"]

[dependencies]
clap.workspace = true
adze-tool = { path = "../tool" }
serde_json.workspace = true
colored = "3.0"
anyhow.workspace = true
env_logger = "0.11"
log = "0.4"
walkdir = "2.5"
notify = "8"
tempfile.workspace = true
libloading = { version = "0.8", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
