[package]
name = "adze-common"
version = "0.8.0-dev"
edition = "2024"
rust-version = "1.92"
authors = ["Steven Zimmerman, CPA"]
description = "Shared grammar expansion logic for the Adze macro and tool crates"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/effortlessmetrics/adze"
homepage = "https://github.com/effortlessmetrics/adze"
documentation = "https://docs.rs/adze-common"
readme = "README.md"
publish = true
keywords = ["parsing", "codegen", "grammar", "tree-sitter"]
categories = ["development-tools"]
include = ["Cargo.toml", "LICENSE*", "README*", "src/**"]

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"

[features]
strict_docs = [] # Enable strict documentation requirements

[dependencies]
syn = { version = "2", features = [ "full", "extra-traits" ] }
quote = "1"
adze-common-syntax-core = { version = "0.1.0", path = "../crates/common-syntax-core" }

[dev-dependencies]
proptest = "1.4"
proc-macro2 = "1"
insta = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
