[package]
name = "adze-common"
description = "Shared logic for the Rust Sitter macro and tool"
readme = "README.md"
repository = "https://github.com/effortlessmetrics/adze"
homepage = "https://github.com/effortlessmetrics/adze"
documentation = "https://docs.rs/adze-common"
version = "0.8.0"
authors = ["Steven Zimmerman, CPA"]
edition.workspace = true
license = "MIT"
publish = ["crates-io"]
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[features]
strict_docs = [] # Enable strict documentation requirements

[dependencies]
syn = { version = "2", features = [ "full", "extra-traits" ] }
quote = "1"
adze-common-syntax-core = { workspace = true }

[dev-dependencies]
proptest = "1.4"
proc-macro2 = "1"
insta = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
