[package]
name = "adze-example"
version = "0.8.0-dev"
authors = ["Steven Zimmerman, CPA"]
edition = "2021"
publish = false

[features]
default = ["pure-rust"]
pure-rust = ["adze/pure-rust"]
c-backend = [
  "adze/tree-sitter-c2rust",
  "adze/tree-sitter-standard",
  "dep:tree-sitter-c2rust"
]
tree-sitter-standard = ["adze/tree-sitter-standard"]
ts-compat = ["adze/ts-compat"]

[dependencies]
adze = { path = "../runtime", default-features = false }
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"
# Only needed in C path
tree-sitter-c2rust = { version = "0.25.2", optional = true }

[build-dependencies]
adze-tool = { path = "../tool" }
toml = "0.8"

[dev-dependencies]
insta = "1.39"
wasm-bindgen-test = "0.3.0"

[[test]]
name = "pure_rust_parser_tests"
path = "tests/pure_rust_parser_tests.rs"
required-features = ["pure-rust"]
