[package]
name = "adze-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.89"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
adze = { path = "../runtime" }
adze-linecol-core = { path = "../crates/linecol-core" }
adze-concurrency-plan-core = { path = "../crates/concurrency-plan-core" }
adze-concurrency-caps-core = { path = "../crates/concurrency-caps-core" }

[[bin]]
name = "fuzz_lexer"
path = "fuzz_targets/fuzz_lexer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_external_scanner"
path = "fuzz_targets/fuzz_external_scanner.rs"
test = false
doc = false

[[bin]]
name = "fuzz_linecol_core"
path = "fuzz_targets/fuzz_linecol_core.rs"
test = false
doc = false

[[bin]]
name = "fuzz_concurrency_caps_core"
path = "fuzz_targets/fuzz_concurrency_caps_core.rs"
test = false
doc = false

[[bin]]
name = "fuzz_concurrency_plan_core"
path = "fuzz_targets/fuzz_concurrency_plan_core.rs"
test = false
doc = false
