[package]
name = "adze-glr-core"
version = "0.8.0-dev"
edition.workspace = true
rust-version.workspace = true
description = "GLR parser generation algorithms for Adze"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/adze"
homepage = "https://github.com/EffortlessMetrics/adze"
documentation = "https://docs.rs/adze-glr-core"
readme = "../README.md"
publish = true
keywords = ["parsing", "glr", "parser-generator"]
categories = ["development-tools"]
include = [
    "Cargo.toml",
    "/LICENSE*",
    "/README*",
    "src/**"
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
adze-ir = { version = "0.8.0-dev", path = "../ir" }
adze-glr-versioning = { version = "0.8.0-dev", path = "../crates/glr-versioning" }
indexmap = { workspace = true, features = ["serde"] }
fixedbitset = { version = "0.5", default-features = false }
serde.workspace = true
thiserror.workspace = true
typed-arena = "2.0"

# Optional parallel processing
rayon = { workspace = true, optional = true }
rustc-hash.workspace = true
smallvec.workspace = true

# Optional serialization support for GLR mode
postcard = { version = "1", features = ["use-std"], optional = true }

[features]
default = []
parallel = ["rayon"]
serialization = ["dep:postcard"]  # Enable ParseTable serialization for GLR mode
strict_docs = []
strict_api = []
glr-trace = []
glr_telemetry = []  # Enable telemetry counters for performance monitoring
test-helpers = []
strict-invariants = []
memory-tests = []
json-parity = []
perf-counters = []
test-api = []
debug_glr = [] # Enable debug output for GLR parser

[dev-dependencies]
insta.workspace = true
criterion.workspace = true
proptest.workspace = true
dhat = "0.3"
serde_json.workspace = true
adze-bdd-scenario-fixtures = { version = "0.1.0", path = "../crates/bdd-scenario-fixtures" }
adze-parser-contract = { version = "0.1.0", path = "../crates/parser-contract" }
glr-test-support = { version = "0.1.0", path = "../glr-test-support" }
trybuild = "1"

[[bench]]
name = "automaton"
harness = false

[[bench]]
name = "perf_snapshot"
harness = false
