[package]
name = "adze-glr-core"
version = "0.8.0-dev"
edition = "2024"
rust-version = "1.87"
description = "GLR parser generation algorithms for pure-Rust Tree-sitter"
license = "MIT"
repository = "https://github.com/EffortlessMetrics/adze"
homepage = "https://github.com/EffortlessMetrics/adze"
documentation = "https://docs.rs/adze-glr-core"
readme = "README.md"
publish = false
include = [
    "Cargo.toml",
    "LICENSE*",
    "README*",
    "src/**"
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
adze-ir = { version = "0.8.0-dev", path = "../ir" }
indexmap = { version = "2.0", features = ["serde"] }
fixedbitset = { version = "0.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
typed-arena = "2.0"

# Optional parallel processing
rayon = { version = "1.0", optional = true }
rustc-hash = "2.1.1"
postcard = { version = "1.1", optional = true, features = ["use-std"] }
smallvec = "1.13"

[features]
default = []
parallel = ["rayon"]
serialization = ["postcard"]  # Enable ParseTable serialization for GLR mode
glr_telemetry = []  # Enable telemetry counters for performance monitoring
strict_docs = []
strict_api = []
glr-trace = []
test-helpers = []
strict-invariants = []
memory-tests = []
json-parity = []
perf-counters = []
test-api = []
debug_glr = [] # Enable debug output for GLR parser

[dev-dependencies]
insta = "1.0"
criterion = "0.5"
dhat = "0.3"
serde_json = "1.0"
glr-test-support = { path = "../glr-test-support" }
adze-bdd-scenario-fixtures = { version = "0.1.0", path = "../crates/bdd-scenario-fixtures" }
proptest = { workspace = true }
trybuild = "1"
adze-tablegen = { version = "0.8.0-dev", path = "../tablegen" }

[[bench]]
name = "automaton"
harness = false

[[bench]]
name = "perf_snapshot"
harness = false
