[package]
name = "glr-test-support"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
rust-sitter-glr-core = { path = "../glr-core" }
rust-sitter-ir = { path = "../ir" }

[features]
perf-counters = ["rust-sitter-glr-core/perf-counters"]

[lib]
path = "src/lib.rs"
