[package]
name = "adze-golden-tests"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
sha2 = "0.10"
adze-python = { path = "../grammars/python", optional = true }
adze-javascript = { path = "../grammars/javascript", optional = true }
adze = { path = "../runtime", optional = true }

[features]
default = []
python-grammar = ["adze-python", "adze"]
javascript-grammar = ["adze-javascript", "adze"]
all-grammars = ["python-grammar", "javascript-grammar"]

[dev-dependencies]
