[package]
name = "adze-ir"
version = "0.8.0-dev"
edition.workspace = true
rust-version.workspace = true
description = "Grammar Intermediate Representation for Adze"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EffortlessMetrics/adze"
homepage = "https://github.com/EffortlessMetrics/adze"
documentation = "https://docs.rs/adze-ir"
readme = "../README.md"
publish = true
keywords = ["parsing", "grammar", "ir"]
categories = ["development-tools"]
include = [
    "Cargo.toml",
    "/LICENSE*",
    "/README*",
    "src/**"
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[features]
default = []
optimize = []
strict_docs = []

[dev-dependencies]
adze-glr-core = { version = "0.8.0-dev", path = "../glr-core" }
bincode.workspace = true
insta.workspace = true
proptest.workspace = true
