[package]
name = "adze-ir"
version = "0.8.0-dev"
edition = "2024"
rust-version = "1.87"
description = "Grammar Intermediate Representation for pure-Rust Tree-sitter"
license = "MIT"
repository = "https://github.com/EffortlessMetrics/adze"
homepage = "https://github.com/EffortlessMetrics/adze"
documentation = "https://docs.rs/adze-ir"
readme = "README.md"
publish = false
include = [
    "Cargo.toml",
    "LICENSE*",
    "README*",
    "src/**"
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
indexmap = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
anyhow = "1.0"

[features]
default = []
optimize = []
strict_docs = []

[dev-dependencies]
adze-glr-core = { version = "0.8.0-dev", path = "../glr-core" }
bincode = { workspace = true }
postcard = { version = "1.1", features = ["use-std"] }
insta = "1.0"
proptest = "1.4"
