[package]
name = "adze-ir"
version = "0.8.0-dev"
edition = "2024"
rust-version = "1.92"
description = "Grammar Intermediate Representation for pure-Rust Tree-sitter"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/effortlessmetrics/adze"
homepage = "https://github.com/effortlessmetrics/adze"
documentation = "https://docs.rs/adze-ir"
readme = "README.md"
publish = true
include = ["Cargo.toml", "LICENSE*", "README*", "src/**"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
indexmap = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
anyhow = "1.0"

[features]
default = []
optimize = []
strict_docs = []

[dev-dependencies]
insta = "1.0"
proptest = "1.4"
serde_json = "1.0"
postcard = { workspace = true }
adze-glr-core = { version = "0.8.0-dev", path = "../glr-core" }
indexmap = { version = "2.0", features = ["serde"] }
