[package]
name = "rust-sitter-lsp-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-sitter-ir = { path = "../ir" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8"
rust-sitter = { path = "../runtime", features = ["pure-rust"] }

[dev-dependencies]
tempfile = "3.0"
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "rust-sitter-lsp-gen"
path = "src/bin/rust-sitter-lsp-gen.rs"

[dependencies.clap]
version = "4.0"
features = ["derive"]