[package]
name = "adze-lsp-generator"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
adze-ir = { path = "../ir" }
anyhow = "1.0"
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.0"
lsp-types = "0.94"

[[bin]]
name = "adze-lsp-gen"
path = "src/bin/adze-lsp-gen.rs"

[dependencies.clap]
version = "4.0"
license = "MIT OR Apache-2.0"
features = ["derive"]