[package]
name = "adze-macro"
description = "Procedural macros for Rust Sitter"
readme = "../README.md"
repository = "https://github.com/effortlessmetrics/adze"
version = "0.8.0-dev"
authors = ["Steven Zimmerman, CPA"]
edition = "2024"
license = "MIT"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[lib]
proc-macro = true
path = "src/lib.rs"

[features]
pure-rust = []
strict_docs = [] # Enable strict documentation requirements

[dependencies]
syn = { version = "2", features = [ "full", "extra-traits" ] }
quote = "1"
proc-macro2 = "1"
adze-common = { version = "0.8.0-dev", path = "../common" }

[dev-dependencies]
insta = "1.39"
tempfile = "3"
trybuild = "1.0"
proptest = "1.4"
