[package]
name = "adze-macro"
version = "0.8.0-dev"
edition = "2024"
rust-version = "1.92"
authors = ["Steven Zimmerman, CPA"]
description = "Procedural macros for defining tree-sitter grammars alongside Rust logic"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/effortlessmetrics/adze"
homepage = "https://github.com/effortlessmetrics/adze"
documentation = "https://docs.rs/adze-macro"
readme = "README.md"
publish = true
keywords = ["parsing", "codegen", "grammar", "proc-macro"]
categories = ["development-tools"]
include = ["Cargo.toml", "LICENSE*", "README*", "src/**"]

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true
path = "src/lib.rs"

[features]
pure-rust = []
strict_docs = [] # Enable strict documentation requirements

[dependencies]
syn = { version = "2", features = [ "full", "extra-traits" ] }
quote = "1"
proc-macro2 = "1"
adze-common = { version = "0.8.0-dev", path = "../common" }

[dev-dependencies]
insta = "1.39"
tempfile = "3"
trybuild = "1.0"
proptest = "1.4"
